Fix all warnings in DialogFourierDiagramm and related code
- Add @SuppressWarnings annotations for deprecation, serial, and this-escape
- Replace deprecated URL(URL, String) with URI.create().toURL()
- Replace deprecated Event.CTRL_MASK with InputEvent.CTRL_DOWN_MASK
- Convert anonymous inner classes to lambda expressions (ActionListeners)
- Remove unused field mItemF5 and local variables (ich, filter)
- Make fields final that are only assigned in constructor
- Move addComponentListener to end of constructor to fix this-escape warning
- Extract FourierKurvenRekonstruktion to separate public class file
  (removes auxiliary class access warning)
- Clean up and organize imports